2002-04-17  Geoffrey Keating  <geoffk@redhat.com>

	* dwarf2dbg.c (dwarf2_gen_line_info): Do emit duplicate line
	numbers, gdb relies on them to detect the start of the prologue.

2002-04-17  Martin Schwidefsky  <schwidefsky@de.ibm.com>

	* config/tc-s390.c (tc_s390_fix_adjustable): Prevent adjustments to
	symbols in merge sections.

2002-04-16  Alan Modra  <alan@weed.local>

	* as.c (main): Don't reference _bfd_chunksize.

2002-04-15  Tom Rix  <trix@redhat.com>

	* config/tc-d10v.c (d10v_fix_adjustable): Prevent adjustments to 
	symbols in merge sections.

2002-04-11  Richard Sandiford  <rsandifo@redhat.com>

	* doc/invoke.texi (TC_LARGEST_EXPONENT_IS_NORMAL): Document.
	* config/atof-ieee.c (TC_LARGEST_EXPONENT_IS_NORMAL): Add an
	argument for the precision.
	(gen_to_words): Update accordingly.

2002-04-10  Alan Modra  <amodra@bigpond.net.au>

	* as.c (parse_args <OPTION_VERSION>): Use VERSION is
	BFD_VERSION_STRING unavailable.
	* config/tc-i386.c (INLINE): Define (for non-BFD assembler).

Tue Apr  9 16:45:48 2002  J"orn Rennecke <joern.rennecke@superh.com>

	* config/tc-sh.h (TC_FIX_ADJUSTABLE): Disable adjusting if
	symbol_used_in_reloc_p is true.

	* config/tc-sh.c (md_apply_fix3): Don't zero relocations on big
	endian hosts.

2002-04-04  Alan Modra  <amodra@bigpond.net.au>

	* dep-in.sed: Cope with absolute paths.
	* Makefile.am (dep.sed): Subst TOPDIR.
	Run "make dep-am".
	* Makefile.in: Regenerate.

2002-04-04  Thiemo Seufer <seufer@csv.ica.uni-stuttgart.de>

	* config/tc-mips.c (mips16_macro_build): Cast type mismatch.
	(mips_ip): Remove unused variable.
	(md_apply_fix3): Cast signed/unsignes mismatches. Replace
	unsigned char with bfd_byte.
	(s_file): Remove unused variable.
	(s_mips_ent): Likewise.

2002-04-03  Tom Rix  <trix@redhat.com>

	* config/tc-d10v.c (d10v_insert_operand): Fix warning in as_bad_where.
	(build_insn): Same.
	(find_opcode): Fix warning in as_warn.
	* config/tc-d10v.h: Update Copyright.

2002-04-03  Alan Matsuoka <alanm@redhat.com>